--- a/doc/source/whatsnew/v2.2.0.rst
+++ b/doc/source/whatsnew/v2.2.0.rst
@@ -45,7 +45,7 @@ enhancement2
 
 Other enhancements
 ^^^^^^^^^^^^^^^^^^
-- :meth:`pandas.tseries.guess_datetime_format` is now available (:issue:`54727`)
+- :meth:`pandas.tseries.api.guess_datetime_format` is now available (:issue:`54727`)
 - DataFrame.apply now allows the usage of numba (via ``engine="numba"``) to JIT compile the passed function, allowing for potential speedups (:issue:`54666`)
 
 .. ---------------------------------------------------------------------------
