BUG df.plot.box handles matplotlib Axes with sharey=True (#54940)
* BUG manage sharey in plot.box with vert=False

* fix

* add entry in whats new

* iter

--- a/doc/source/whatsnew/v2.2.0.rst
+++ b/doc/source/whatsnew/v2.2.0.rst
@@ -288,7 +288,7 @@ Period
 
 Plotting
 ^^^^^^^^
--
+- Bug in :meth:`DataFrame.plot.box` with ``vert=False`` and a matplotlib ``Axes`` created with ``sharey=True`` (:issue:`54941`)
 -
 
 Groupby/resample/rolling
