DOC: Add release date for 2.1.1

--- a/doc/source/whatsnew/v2.1.1.rst
+++ b/doc/source/whatsnew/v2.1.1.rst
@@ -1,6 +1,6 @@
 .. _whatsnew_211:
 
-What's new in 2.1.1 (September XX, 2023)
+What's new in 2.1.1 (September 20, 2023)
 ----------------------------------------
 
 These are the changes in pandas 2.1.1. See :ref:`release` for a full changelog
