DEPR offsets: rename 'M' to 'ME' (#52064)
* Frequency: raise warnings when using ‘M’ frequency

* Frequency: raise warnings when using ‘M’ frequency II

* remove is_period and change str representation for freq in Period [skip ci]

* remove is_period and fix some tests [skip ci]

* fix some tests

* fix some tests II

* fix tests in pandas/tests/indexes/period/ [skip ci]

* fix tests in pandas/tests/indexes/period/ and correct timedeltas.pyx

* update frequencies.py, resample.py, and fix some tests

* modify pandas/tseries/frequencies.py

* fix tests

* fix tests II

* fix tests III

* rename 'M' to 'ME' in docs

* rename 'M' to 'ME' in docs II

* rename 'M' to 'ME' in docs III

* rename 'M' to 'ME' in docs IV

* rename 'M' to 'ME' in docs V

* add is_period to to_offset I

* add is_period to to_offset II

* correct the definition of period_array(…) and fix 19 tests

* add is_period to _parse_dtype_strict() and fix tests

* add constant OFFSET_TO_PERIOD_FREQSTR to period.pyx and fix tests

* correct definitions of extract_ordinals() and _round(), fix tests

* add replacement ME to M in _require_matching_freq, _parsed_string_to_bounds, and fix tests

* add the constant PERIOD_TO_OFFSET_FREQSTR to period.pyx, correct definition of _resolution_obj and fix tests

* fix tests

* add the conversion ME to M to _from_datetime64, period_index, raise_on_incompatible and fix tests

* fix some tests with resample

* correct definitions of to_period, freqstr and get_period_alias, fix tests for plotting

* correct pre-commit failures

* add key from Grouper to the constructor of TimeGrouper and fix tests

* add to asfreq() from resampler the conversion ME to M, fix tests

* fix tests for for PeriodIndex and base tests for resample

* correct the constructor of TimeGrouper and fix tests for resample and plotting

* correct the definition of use_dynamic_x() and fix tests for plotting

* correct the definition o

--- a/doc/source/whatsnew/v2.2.0.rst
+++ b/doc/source/whatsnew/v2.2.0.rst
@@ -177,6 +177,31 @@ Other API changes
 
 Deprecations
 ~~~~~~~~~~~~
+
+Deprecate alias ``M`` in favour of ``ME`` for offsets
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+
+The alias ``M`` is deprecated in favour of ``ME`` for offsets, please use ``ME`` for "month end" instead of ``M`` (:issue:`9586`)
+
+For example:
+
+*Previous behavior*:
+
+.. code-block:: ipython
+
+    In [7]: pd.date_range('2020-01-01', periods=3, freq='M')
+    Out [7]:
+    DatetimeIndex(['2020-01-31', '2020-02-29', '2020-03-31'],
+                  dtype='datetime64[ns]', freq='M')
+
+*Future behavior*:
+
+.. ipython:: python
+
+    pd.date_range('2020-01-01', periods=3, freq='ME')
+
+Other Deprecations
+^^^^^^^^^^^^^^^^^^
 - Changed :meth:`Timedelta.resolution_string` to return ``min``, ``s``, ``ms``, ``us``, and ``ns`` instead of ``T``, ``S``, ``L``, ``U``, and ``N``, for compatibility with respective deprecations in frequency aliases (:issue:`52536`)
 - Deprecated allowing non-keyword arguments in :meth:`DataFrame.to_clipboard`. (:issue:`54229`)
 - Deprecated allowing non-keyword arguments in :meth:`DataFrame.to_csv` except ``path_or_buf``. (:issue:`54229`)
