--- a/doc/source/whatsnew/v2.1.2.rst
+++ b/doc/source/whatsnew/v2.1.2.rst
@@ -29,7 +29,7 @@ Bug fixes
 
 Other
 ~~~~~
--
+- Fixed non-working installation of optional dependency group `output_formatting`. Replacing underscore `_` with a dash `-` fixes broken dependency resolution. A correct way to use now is ``pip install pandas[output-formatting]``.
 -
 
 .. ---------------------------------------------------------------------------
@@ -37,3 +37,4 @@ Other
 
 Contributors
 ~~~~~~~~~~~~
+.. contributors:: v2.1.1..v2.1.2|HEAD
